--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This is a weather application created by Elsabe Crous. It uses data from mapbox.com and darksky.com.</p>
         <img class="portrait" src="/img/pic1.jpg" />
     </div>
 
